# SafetyAgent

./: .env.example  .gitignore  QUICKSTART.md  README.md  docker-compose.yml  main.py  pyproject.toml  run.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ErrorMessage.tsx  Layout.tsx  Loading.tsx
frontend/src/hooks/: useAPI.ts
frontend/src/pages/: ActivityTab.tsx  Assets.tsx  Monitor.tsx  RiskScanner.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
scripts/: import_existing.py  init_db.py  sync_events.py
src/safetyagent/: __main__.py  config.py  database.py  gateway_client.py
src/safetyagent/api/: __init__.py  main.py
src/safetyagent/api/routes/: __init__.py  assets.py  events.py  messages.py  redteam.py  sessions.py  stats.py  tool_calls.py
src/safetyagent/api/schemas/: __init__.py
src/safetyagent/asset_scanner/: __init__.py  models.py  scanner.py
src/safetyagent/models/: __init__.py  base.py  event.py  message.py  tool_call.py
src/safetyagent/parsers/: __init__.py  jsonl_parser.py
src/safetyagent/services/: __init__.py  event_sync_service.py  message_sync_service.py
src/safetyagent/watchers/: __init__.py  file_watcher.py
src/sas/models/: session.py
tests/: test_api.py  test_parser.py
