[project]
name = "safetyagent"
version = "0.1.0"
description = "SafetyAgent - Real-time monitoring and analytics system for OpenClaw AI agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    # Database
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0", # PostgreSQL async driver
    "aiosqlite>=0.19.0", # SQLite async driver
    # Data Validation
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    # File Monitoring
    "watchdog>=4.0.0",
    # Asset Scanning (external module dependencies)
    "psutil>=5.9.0", # System and hardware info
    # Utilities
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    # CLI (optional, for future CLI tools)
    "typer>=0.9.0",
    "rich>=13.7.0",
    "greenlet>=3.3.1",
    "pynvml>=13.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/safetyagent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
